<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="com.praveenbhati.rahul.AboutUsActivity"
        tools:showIn="@layout/activity_about_us">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vchip Design &amp; Training Pvt. Ltd."
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="(Associate with IIT Kharagpur)"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="(ISO 9001-2008 Certified)"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Address: Jayant Complex, Gadge Nagar, Amravati, Maharashtra – 444602, India
Email: vchipdesign@gmail.com, Tel:- +91-9975925441" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="About V-chip design and training pvt. Ltd.:"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/about_vchip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vision:"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vision"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mission:"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_one"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_two"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Features:"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/features"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="In our area:"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_our_area"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Benefits of our students:"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benefits"
            android:layout_marginTop="5dp"/>


    </LinearLayout>
</ScrollView>